[project]
name = "aprs"
version = "1.0.0"
description = "Active Panoramic Referring Segmentation - A benchmark for active perception in 360° environments with vision-language agents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Song Tang", email = "tangsong322@gmail.com"},
    {name = "Shuming Hu"},
    {name = "Xincheng Shuai"},
    {name = "Henghui Ding", email = "hhding@fudan.edu.cn"},
    {name = "Yu-Gang Jiang", email = "ygj@fudan.edu.cn"},
]
maintainers = [
    {name = "Song Tang", email = "tangsong322@gmail.com"},
    {name = "Henghui Ding", email = "hhding@fudan.edu.cn"},
]
keywords = [
    "panoramic-vision",
    "referring-segmentation",
    "active-perception",
    "360-degree",
    "embodied-ai",
    "vision-language-models",
    "spatial-reasoning",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21,<2",
    "opencv-python>=4.5",
    "Pillow>=9.0",
    "datasets>=2.14",
    "pyarrow>=12.0",
    "tqdm>=4.65",
    "openai>=1.0",
    "huggingface_hub>=0.16",
    "setuptools>=68.0.0,<72.0.0",
]

[project.optional-dependencies]
viewer = [
    "PyQt5>=5.15.11",
    "PyOpenGL>=3.1.10",
    "PyOpenGL-accelerate>=3.1.10",
]
sam3 = [
    "torch>=2.0,<2.5",
    "torchvision>=0.15,<0.20",
    "timm>=1.0.17",
    "einops>=0.8.0",
    "scipy>=1.10",
    "scikit-image>=0.21",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.260",
    "mypy>=1.0",
]
all = [
    "aprs[viewer,sam3,dev]",
]

[project.urls]
Homepage = "https://henghuiding.com/APRS/"
Repository = "https://github.com/FudanCVL/APRS"
Documentation = "https://henghuiding.com/APRS/"
"Bug Tracker" = "https://github.com/FudanCVL/APRS/issues"
Paper = "https://arxiv.org/abs/2607.02497v1"
Dataset = "https://huggingface.co/datasets/APRS"

[project.scripts]
aprs-rollout = "scripts.rollout:main"
aprs-viewer = "tools.viewer_360:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aprs", "panoseeker"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
